Add contúdo na index.html

--- a/index.html
+++ b/index.html
@@ -3,16 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML</title>
+    <title>Rimo Decor </title>
 </head>
 <body>
     <header>
-        <h1>Aqui vai meu cabeçalho</h1>
+        <h1>Soluções</h1>
     </header>
+<main>
+    <div>
+        <section>
+            <article>
+                <h2>Automação Residencial</h2>
+            </article>
+        </section>
+    </div>
 
-    
+    <div>
+        <section>
+            <article>
+                <h2>Sonorização Ambiente</h2>
+            </article>
+        </section>
+    </div>
+
+    <div>
+        <section>
+            <article>
+                <h2>Home Cinema</h2>
+            </article>
+        </section>
+    </div>
+
+    <div>
+        <section>
+            <article>
+                <h2>Rede e Wi-Fi</h2>
+            </article>
+        </section>
+    </div>
+</main>
+
     <footer>
-        <h6>aqui vai meu rodapé</h6>
+        <h6>Aqui vai meu rodapé</h6>
     </footer>
 </body>
 </html>
