Alterando conteúdo do index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </main>
 
     <footer>
-        <h6>Aqui vai meu rodapé</h6>
+        <h6>&copy; Powered by Ritmo Decor e Tecnologias</h6>
     </footer>
 </body>
 </html>
