Add pginas sobre a empresa

--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
             </article>
         </section>
     </div>
+
+    <div>
+        <section>
+            <article>
+                <h2>Sobre nós</h2>
+                <p></p>
+            </article>
+        </section>
+    </div>
 </main>
 
     <footer>
