--- a/index.html
+++ b/index.html
@@ -7,53 +7,24 @@
 </head>
 <body>
     <header>
-        <h1>Soluções</h1>
+        <h1>Formulário de cadastro</h1>
     </header>
-<main>
-    <div>
-        <section>
-            <article>
-                <h2>Automação Residencial</h2>
-            </article>
-        </section>
-    </div>
 
-    <div>
-        <section>
-            <article>
-                <h2>Sonorização Ambiente</h2>
-            </article>
-        </section>
-    </div>
+    <main>
+        <div>
+            <section>
+                <label for="nome">Nome</label>
+                <input type="text" id="nome" placeholder="Digite seu nome">
 
-    <div>
-        <section>
-            <article>
-                <h2>Home Cinema</h2>
-            </article>
-        </section>
-    </div>
+                <label for="e-mail">Email</label>
+                <input type="email" id="e-mail" placeholder="Digite seu email">
 
-    <div>
-        <section>
-            <article>
-                <h2>Rede e Wi-Fi</h2>
-            </article>
-        </section>
-    </div>
+                <label for="senha">Senha</label>
+                <input type="password" id="senha" placeholder="Digite sua senha">
 
-    <div>
-        <section>
-            <article>
-                <h2>Sobre nós</h2>
-                <p></p>
-            </article>
-        </section>
-    </div>
-</main>
-
-    <footer>
-        <h6>&copy; Powered by Ritmo Decor e Tecnologias</h6>
-    </footer>
+                <button type="submit">Enviar</button>
+            </section>
+        </div>
+    </main>
 </body>
 </html>
