--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <label for="senha">Senha</label>
                 <input type="password" id="senha" placeholder="Digite sua senha">
                 <br>
-                <button type="submit">Enviar</button>
+                <button type="submit">Cadastrar</button>
             </section>
         </div>
     </main>
